added plot, updated nbs

--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2661,7 +2661,7 @@
     "\n",
     "**20170313**\n",
     "\n",
-    "Then I wrote a script that takes this transposed genepop file and the population map, and filters for a particular missing value threshold. I  originally planned on using a cut off of .5, but that filtered out none of my loci. So I changed it to be more conservative, to .2, which is what Mary uses. It filtered out 86.5 percent of my loci.\n",
+    "Then I wrote a script that takes this transposed genepop file and the population map, and filters for a particular missing value threshold. I  originally planned on using a cut off of .5, but that filtered out none of my loci. So I changed it to be more conservative, to .2, which is what Mary uses. It filtered out about 15% of my loci.\n",
     "\n",
     "The call looked like:\n",
     "\n",
@@ -3150,7 +3150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -3169,7 +3169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -3179,11 +3179,11 @@
      "output_type": "stream",
      "text": [
       "\r\n",
-      "This script filtered out 300 loci, out of a total of 7748 loci.\r\n",
+      "This script filtered out 2466 loci, out of a total of 7748 loci.\r\n",
       "\r\n",
-      "Your keptloci file should have 7448 loci, and your lostloci file should have 300 loci.\r\n",
+      "Your keptloci file should have 5282 loci, and your lostloci file should have 2466 loci.\r\n",
       "\r\n",
-      "You retained 96.1% of your loci after filtering for missing values.\r\n"
+      "You retained 68.1% of your loci after filtering for missing values.\r\n"
      ]
     }
    ],
@@ -3193,7 +3193,7 @@
     "-p ../../../WorkingFolder/popmap_cragigrun1_fortagsGP.txt \\\n",
     "-k ../../../WorkingFolder/Stacks_2/trans_tags_gp_fMV_20170324.csv \\\n",
     "-l ../../../WorkingFolder/Stacks_2/lostloci_20170324.csv \\\n",
-    "-t .5"
+    "-t .2"
    ]
   },
   {
@@ -3207,7 +3207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -3226,7 +3226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -3251,7 +3251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -3282,7 +3282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -3294,12 +3294,12 @@
       "[['sample' 'FG001' 'FG002' 'FG003' 'FG004' 'FG005' 'FG006' 'FG007' 'FG009']\n",
       " ['6' '0101' '0101' '0101' '0101' '0109' '0101' '0000' '0101']\n",
       " ['13' '0505' '0505' '0505' '0505' '0505' '0505' '0505' '0507']\n",
-      " ['16' '0707' '0707' '0711' '0000' '0707' '0407' '0707' '0707']\n",
       " ['20' '0611' '0606' '0505' '0606' '0606' '0606' '0618' '0101']\n",
       " ['22' '0303' '0303' '0303' '0303' '0303' '0303' '0303' '0303']\n",
-      " ['27' '0707' '0710' '0107' '0607' '0707' '0707' '0707' '0507']\n",
       " ['28' '0202' '0202' '0202' '0202' '0202' '0102' '0202' '0202']\n",
-      " ['31' '0405' '0406' '0205' '0404' '0404' '0204' '0404' '0204']]\n"
+      " ['31' '0405' '0406' '0205' '0404' '0404' '0204' '0404' '0204']\n",
+      " ['35' '0101' '0101' '0101' '0101' '0101' '0101' '0101' '0101']\n",
+      " ['49' '0101' '0101' '0101' '0101' '0101' '0101' '0102' '0101']]\n"
      ]
     }
    ],
@@ -3319,7 +3319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -3338,7 +3338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -3374,7 +3374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -3386,7 +3386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -3397,7 +3397,7 @@
        "u'/mnt/hgfs/SHARED_FOLDER/WorkingFolder/Stacks_2'"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3408,7 +3408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -3420,13 +3420,13 @@
       "sample,FG001,FG002,FG003,FG004,FG005,FG006,FG007,FG009,FG010,FG011,FG013,FG014,FG015,FG016,FG017,FG018,FG019,FG021,FG024,FG026,FG027,FG031,FG032,FG033,FG034,FG035,FG100_B,FG101_B,FG102_B,FG103_B,FG104_B,FG106,FG107,FG108,FG109,FG111,FG201,FG202,FG203,FG204,FG205,FG206,FG207,FG209,FG210,FG211,FG212,Q314,Q316,Q318,Q323,Q324,Q325,Q326,Q330,Q332,Q334,Q338,Q339,Q347,Q351,Q352,Q353,Q354,Q355,Q356\r\n",
       "6,0101,0101,0101,0101,0109,0101,0000,0101,0101,0000,0404,0101,0106,0000,0101,0101,0101,0106,0000,0101,0101,0109,0101,0106,0101,0000,0101,0101,0101,0304,0109,0109,0101,0107,0101,0107,0101,0406,0101,0101,0101,0101,0101,0108,0101,0101,0101,0101,0101,0101,0109,0101,0101,0101,0107,0101,0101,0101,0105,0101,0101,0107,0101,0108,0102,0101\r\n",
       "13,0505,0505,0505,0505,0505,0505,0505,0507,0505,0505,0506,0505,0000,0000,0000,0505,0505,0505,0000,0505,0507,0507,0505,0507,0505,0506,0505,0505,0505,0505,0505,0506,0505,0505,0505,0305,0507,0505,0505,0507,0505,0505,0505,0404,0505,0507,0000,0505,0505,0505,0505,0505,0505,0707,0506,0505,0607,0505,0505,0505,0505,0505,0505,0505,0207,0707\r\n",
-      "16,0707,0707,0711,0000,0707,0407,0707,0707,0707,0707,0207,0711,1111,0707,0000,0411,0404,0707,0707,0000,0507,0000,0707,0101,0000,0607,0711,0709,0707,0707,0707,0707,0707,0707,0707,0707,0711,0707,0710,1111,0404,0808,0707,1111,0707,0707,1111,0707,0000,0606,0407,0711,0707,0707,0000,0707,0707,0000,0107,0707,0000,1111,0404,0303,0707,0707\r\n",
       "20,0611,0606,0505,0606,0606,0606,0618,0101,0606,0606,0606,0608,0606,0506,0606,0505,0000,0618,0000,0606,0000,0505,0611,0606,0000,0506,0606,0606,0606,0606,0607,0606,1818,0000,0506,0618,0606,0505,1414,0606,0615,0606,0000,0611,0506,1616,1717,1111,0405,0206,0606,0506,0609,0606,0606,0909,0606,1010,0616,0606,0606,0506,0505,0610,1313,0606\r\n",
       "22,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0000,0303,0303,0303,0303,0303,0303,0000,0303,0303,0303,0303,0303,0303,0303,0103,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0103,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0303,0203,0303,0303,0303,0303,0303\r\n",
-      "27,0707,0710,0107,0607,0707,0707,0707,0507,0707,0707,0708,0710,0707,1010,0000,0710,0707,0710,0707,0707,0707,0707,0707,0107,0707,0708,0707,0707,0708,0307,0710,0707,0710,0000,0708,0107,0707,0110,0404,0707,0707,0707,0707,0707,0810,0710,0710,0707,0111,0708,0000,0707,0707,0707,0710,0207,0707,0708,0710,0707,0710,0710,0000,0707,0707,0707\r\n",
       "28,0202,0202,0202,0202,0202,0102,0202,0202,0202,0000,0202,0203,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0205,0202,0202,0202,0204,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202,0202\r\n",
       "31,0405,0406,0205,0404,0404,0204,0404,0204,0205,0405,0404,0404,0404,0405,0405,0405,0405,0404,0404,0404,0304,0204,0404,0404,0000,0404,0404,0404,0404,0404,0405,0404,0404,0404,0404,0404,0404,0404,0404,0404,0404,0405,0404,0404,0404,0404,0404,0404,0404,0204,0404,0404,0404,0404,0404,0405,0404,0404,0404,0406,0405,0104,0000,0404,0404,0404\r\n",
-      "35,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0000,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0102,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101\r\n"
+      "35,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0000,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0102,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101\r\n",
+      "49,0101,0101,0101,0101,0101,0101,0102,0101,0101,0101,0101,0101,0101,0101,0102,0000,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0102,0101,0102,0000,0101,0101,0101,0102,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101,0101\r\n",
+      "50,0609,0609,0606,0606,0306,0606,0606,0607,0609,0606,0606,0606,0000,0000,0606,0000,0609,0606,0606,0606,0606,0606,0000,0606,0606,0606,0606,0206,0606,0406,0606,0606,0613,0606,0617,0000,0608,0611,0106,0616,0612,0606,0606,0606,0606,0106,0606,0606,0000,1313,0617,0606,0606,0606,0606,0606,0606,0606,0606,0615,0917,0606,0606,0606,0506,0606\r\n"
      ]
     }
    ],
@@ -3434,6 +3434,28 @@
     "# double-check still has trailing zeros, has only columns you want, etc.\n",
     "\n",
     "!head trans_tags_gp_fMV_sansreps_20170324.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5283"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_array.shape[0]"
    ]
   },
   {
@@ -3506,7 +3528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
@@ -3525,7 +3547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
