--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/Preliminary_results_of_population_structure.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/Preliminary_results_of_population_structure.ipynb
@@ -13,8 +13,37 @@
    "source": [
     "## Genotyping error\n",
     "\n",
-    "I sequenced four scallops twice in the lane with unique barcodes so that I could quantify genotyping error. \n"
+    "I sequenced four scallops twice in the lane with unique barcodes so that I could quantify genotyping error. I calculated genotyping error by counting the number of genotypes between replicates that did not perfectly match, excluding replicates where either had missing data. Thus, a genotyping error includes both a one allele match and neither allele match (e.g., 0102 & 0202 would be genotyping error with one allele match, and 0202 & 0303 would be neither allele match).\n",
+    "\n",
+    "SNP-level genotyping error: **.38%**\n",
+    "<br>Haplotype-level genotyping error: **1.76%**\n",
+    "\n",
+    "## SNP level DAPC\n",
+    "\n",
+    "To produce a SNP level DAPC, I used the Genepop file that ``population`` outputs at the end of the second round of Stacks. This is after I've made a \"reference genome\" by ultra-filtering a catalog of de novo loci. I then filtered for missing values, filtering out out any loci where the frequency of missing values within any population exceeded .2 (retained 86.5% of loci). Then, I filtered for a minor allele frequency of .05 across populations (retained 21.1% of loci). In the future, I'll write a script that can filter for minor allele frequency based on population allele frequencies, but I didn't have time, and figured it would be a useful preliminary look to filter across populations given that my population sizes are pretty small and even. After these two filtering stages, I plotted the DAPC. Script [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/CRAGIG_RUN1_tags_DAPC_20170324.R), plot:\n",
+    "\n",
+    "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/DAPC_20170322.png?raw=true)\n",
+    "\n",
+    "Where:\n",
+    "- WA1 = Sekiu\n",
+    "- WA2 = San Juans\n",
+    "- WA3 = Dabob\n",
+    "\n",
+    "Sorry that's not in the legend! It didn't occur to me to make it more readable until later DAPCs.\n",
+    "\n",
+    "## Haplotype level DAPC\n",
+    "\n",
+    "To produce a haplotype level DAPC, I first had to produce a haplotype Genepop, which is not an output of any step in the Stacks pipeline. I used the ``populations`` haplotypes file output and wrote a script that builds a Genepop file. Then, I filtered for missing values, using again a threshold of .2 to remove any locus where in any population the missing value frequency exceeded .2 (retained 68.1% of loci). Then, I tried to filter for a low minor allele frequency, but it kept filtering out pretty much all of my data. So, I plotted "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
