updated nb, added marys dist hap freq from cod

--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/Preliminary_results_of_population_structure.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/Preliminary_results_of_population_structure.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "# Preliminary results of population structure in *Crassadoma gigantea*"
+    "# Preliminary results of population structure in *Crassadoma gigantea*\n",
+    "\n",
+    "I wanted to briefly summarize what I have found so far while analyzing my data at the SNP and haplotype level."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "## Genotyping error\n",
+    "### Genotyping error\n",
     "\n",
     "I sequenced four scallops twice in the lane with unique barcodes so that I could quantify genotyping error. I calculated genotyping error by counting the number of genotypes between replicates that did not perfectly match, excluding replicates where either had missing data. Thus, a genotyping error includes both a one allele match and neither allele match (e.g., 0102 & 0202 would be genotyping error with one allele match, and 0202 & 0303 would be neither allele match).\n",
     "\n",
@@ -19,7 +27,7 @@
     "<br>\n",
     "Haplotype-level genotyping error: **1.76%**\n",
     "\n",
-    "## DAPCs\n",
+    "### DAPCs\n",
     "\n",
     "#### SNP level DAPC\n",
     "\n",
@@ -36,26 +44,53 @@
     "\n",
     "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/hap_freq_dist_20170324.png?raw=true)\n",
     "\n",
-    "No surprise almost everything was getting filtered out with a minor allele frequency threshold of .03 and .05. So, I skipped the minor allele frequency filtering because it didn't make any sense with this data. With just filtering for missing data, I retained **5,282 loci**. Then I plotted a DAPC, script [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/CRAGIG_RUN1_tags_DAPC_20170324.R):\n",
+    "No surprise almost everything was getting filtered out with a minor allele frequency threshold of .03 and .05. For comparison, I made the same plot on Mary's cod data, and found a different distribution of haplotype frequencies, below. Not sure exactly what the difference means, but interesting nonetheless!\n",
+    "\n",
+    "![image]()\n",
+    "\n",
+    "\n",
+    "So, I skipped the minor allele frequency filtering because it didn't make any sense with this data. With just filtering for missing data, I retained **5,282 loci**. Then I plotted a DAPC, script [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/CRAGIG_RUN1_tags_DAPC_20170324.R):\n",
     "\n",
     "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/dapc_tags_noleg_20170324.png?raw=true)\n",
     "\n",
-    "## Fis\n",
+    "### Fis\n",
     "\n",
     "#### SNP level Fis distribution\n",
     "\n",
-    "I used the ``hierfstat`` package in R to calculate locus Fis, and plotted a histogram here using the SNP level Genepop.\n",
+    "I used the ``hierfstat`` package in R to calculate locus Fis, and plotted a histogram here using the SNP level Genepop. Script [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/HIERFSTAT_snps_cragigrun1_20170324.R).\n",
+    "\n",
+    "Here's the distribution **across** populations:\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis/snp_fis_across_pops.png?raw=true)\n",
+    "\n",
+    "Here's the distribution **within** populations to see variation:\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis/snp_fis_wa_strait_20170324.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis/snp_fis_WA_dabob_20170324.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis/snp_fis_WA_sanjuans_20170324.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis/snp_fis_CA_20170324.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis/snp_fis_AK_20170324.png?raw=true)\n",
     "\n",
     "#### Haplotype level Fis distribution\n",
     "\n",
-    "I did the same, but with the haplotype-level Genepop file.\n"
+    "I did the same, but with the haplotype-level Genepop file. R script [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/CRAGIG_RUN1_tags_DAPC_20170324.R).\n",
+    "\n",
+    "Here's the distribution **across** populations:\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis/hap_fis_across_pops.png?raw=true)\n",
+    "\n",
+    "Here's the distribution **within** populations to see variation:\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis/hap_fis_WA_Strait_20170324.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis/hap_fis_WA_dabob_20170324.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis/hap_fis_WA_sanjuans_20170324.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis/hap_fis_CA_20170324.png?raw=true)\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/Fis/hap_fis_AK_20170324.png?raw=true)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
