--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/Preliminary_results_of_population_structure.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/Preliminary_results_of_population_structure.ipynb
@@ -9,7 +9,18 @@
    "source": [
     "# Preliminary results of population structure in *Crassadoma gigantea*\n",
     "\n",
-    "I wanted to briefly summarize what I have found so far while analyzing my data at the SNP and haplotype level."
+    "**20170324**\n",
+    "\n",
+    "I wanted to briefly summarize what I have found so far while analyzing my data at the SNP and haplotype level. \n",
+    "\n",
+    "In my first lane of data, there were:\n",
+    "* 11 individuals from Dabob Bay, WA\n",
+    "* 26 individuals from the Strait, WA\n",
+    "* 10 individuals from the San Juan Islands, WA\n",
+    "* 7 individuals from Alaska\n",
+    "* 12 individuals from Catalina, CA\n",
+    "\n",
+    "In a nutshell, I ran through the Stacks pipeline once and used ``Bowtie`` and ``BLAST`` to build a \"reference genome,\" which is really just an ultra-filtered catalog of loci. Then, I reran the Stacks pipeline with this catalog as the reference genome. My central notebook for this lane of data is [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb), but it's huge and a little nightmarish, hence this summary!"
    ]
   },
   {
@@ -44,14 +55,36 @@
     "\n",
     "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/hap_freq_dist_20170324.png?raw=true)\n",
     "\n",
-    "No surprise almost everything was getting filtered out with a minor allele frequency threshold of .03 and .05. For comparison, I made the same plot on Mary's cod data, and found a different distribution of haplotype frequencies, below. Not sure exactly what the difference means, but interesting nonetheless!\n",
+    "No surprise almost everything was getting filtered out with a minor allele frequency threshold of .03 and .05. For comparison, I made the same plot on Mary's cod data, and found a different distribution of haplotype frequencies, below. Not sure exactly what the difference means, but interesting nonetheless that most of her data sems to have two major peaks, and mine only one.\n",
     "\n",
-    "![image]()\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebooks/marys_hap_freq_dist.png?raw=true)\n",
     "\n",
     "\n",
     "So, I skipped the minor allele frequency filtering because it didn't make any sense with this data. With just filtering for missing data, I retained **5,282 loci**. Then I plotted a DAPC, script [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/CRAGIG_RUN1_tags_DAPC_20170324.R):\n",
     "\n",
     "![img](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/dapc_tags_noleg_20170324.png?raw=true)\n",
+    "\n",
+    "### Fst\n",
+    "\n",
+    "I ran Genepop at both levels, and reported back the outcome here. Unfortunately Genepop doesn't spit out p-values, but also, I'm not sure we'd trust the outcome too much with such small sample sizes.\n",
+    "\n",
+    "#### SNP Level\n",
+    "```\n",
+    "Genetic statistic (Fst):\n",
+    "-0.0004905 \n",
+    "-0.0007776 -0.001206 \n",
+    "-0.001172 -0.001035 0.0009204 \n",
+    "0.0009298 0.002328 0.002004 0.0007775 \n",
+    "```\n",
+    "\n",
+    "#### Haplotype Level\n",
+    "```\n",
+    "Genetic statistic (Fst):\n",
+    "0.00167 \n",
+    "0.0008298 -0.001047 \n",
+    "0.001274 -0.0001063 -0.0002925 \n",
+    "0.002171 0.001857 0.001547 1.457e-005 \n",
+    "```\n",
     "\n",
     "### Fis\n",
     "\n",
