added read depth notebook and plot

--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2773,7 +2773,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Removed replicate samples manually in Notepad ++"
    ]
@@ -2901,7 +2904,7 @@
     "\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/tagID_by_readdepthattag_20170323.png?raw=true)\n",
     "\n",
-    "While investigating... I also looked at the distribution of read depth at individual loci.\n",
+    "While investigating... I also looked at the distribution of read depth at individual loci, although as of **20170403**, I think this is actually of haplotypes and not loci.\n",
     "\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/dist_read_depth_ind_tags_20170323.png?raw=true)\n",
     "\n",
@@ -3080,7 +3083,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Moving towards DAPC from good tag GP\n",
     "\n",
@@ -3092,7 +3098,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3111,7 +3119,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -3124,7 +3134,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3150,7 +3162,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Filter for missing values"
    ]
@@ -3159,7 +3174,9 @@
    "cell_type": "code",
    "execution_count": 79,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3178,7 +3195,9 @@
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3205,7 +3224,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Remove one replicate for each replicated sample\n",
     "\n",
@@ -3216,7 +3238,9 @@
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3235,7 +3259,9 @@
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3260,7 +3286,9 @@
    "cell_type": "code",
    "execution_count": 84,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3291,7 +3319,9 @@
    "cell_type": "code",
    "execution_count": 85,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3328,7 +3358,9 @@
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3347,7 +3379,9 @@
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3383,7 +3417,9 @@
    "cell_type": "code",
    "execution_count": 88,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -3395,7 +3431,9 @@
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3417,7 +3455,9 @@
    "cell_type": "code",
    "execution_count": 90,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3447,7 +3487,9 @@
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3467,7 +3509,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Filter for minor allele frequency\n",
     "\n",
@@ -3480,7 +3525,9 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3499,7 +3546,9 @@
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3524,7 +3573,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Holy shnikeys, that filters pretty much everything out. Mary suggested that I look at allele frequencies at the population level, and use that to determine whether and where to make a cut off.\n",
     "\n",
@@ -3537,7 +3589,9 @@
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -3556,7 +3610,9 @@
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -3568,7 +3624,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "And lastly, the DAPC, produced from this [script](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/CRAGIG_RUN1_tags_DAPC_20170324.R):\n",
     "\n",
@@ -3579,7 +3638,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
