--- a/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing_notebooks/CRAGIG_RUN1.ipynb
@@ -2906,6 +2906,9 @@
     "\n",
     "While investigating... I also looked at the distribution of read depth at individual loci, although as of **20170403**, I think this is actually of haplotypes and not loci.\n",
     "\n",
+    "**20170404** Aha! I fixed that bug in this notebook, and here's the actual plot.\n",
+    "![image]()\n",
+    "\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Analyses/dist_read_depth_ind_tags_20170323.png?raw=true)\n",
     "\n",
     "So it looks like the mode read depth is around 125 reads, and that most of the spared is from fairly low (25 reads) up to 200ish reads."
