updated NBs, added img for NB, added demo NB

--- a/CRAGIG_run1/Notebooks/data_processing/Exploratory_plots_of_het_Fis_RD_seqposition.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Exploratory_plots_of_het_Fis_RD_seqposition.ipynb
@@ -21,7 +21,10 @@
     "* Plot read depth by heterozygosity\n",
     "* Plot Fis by sequence position\n",
     "* Plot Heterozygosity by sequence position\n",
-    "* Visually assess some sequences and see if obvious paralogous loci"
+    "* Visually assess some sequences and see if obvious paralogous loci\n",
+    "\n",
+    "**20170426**\n",
+    "First, though I filtered my SNPs so that I have just one per RAD tag. Notebook [here](), script [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/filtering/filter_one_SNP_per_RADtag.py)."
    ]
   },
   {
