--- a/CRAGIG_run1/Notebooks/data_processing/Exploratory_plots_of_het_Fis_RD_seqposition.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Exploratory_plots_of_het_Fis_RD_seqposition.ipynb
@@ -24,9 +24,10 @@
     "* Visually assess some sequences and see if obvious paralogous loci\n",
     "\n",
     "**20170426**\n",
+    "\n",
     "First, though I filtered my SNPs so that I have just one per RAD tag. Notebook [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/script_demos/filter_one_SNP_per_RADtag.py.ipynb), script [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/filtering/filter_one_SNP_per_RADtag.py).\n",
     "\n",
-    "Now that I've filtered only one SNP per RAD tag, I'm going to rerun hierfstat in R. Code [here]()"
+    "Now that I've filtered only one SNP per RAD tag, I'm going to rerun hierfstat in R. Code [here](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Scripts/Fis/HIERFSTAT_tags_cragigrun1_asONEPOP_oneSNPperRADtag_20170426.R)"
    ]
   },
   {
